# SerendipityMLServer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  serverless.yml
src/: db.py  main.py
src/recommend/: routers.py  schemas.py
src/recommend/ml/association_rule/: fetcher.py  predictor.py  trainer.py
src/recommend/ml/association_rule/production_model/: config.py  train.py
src/recommend/ml/imf/: description.md  fetcher.py  predictor.py  preditor.py  schemas.py  train.py  trainer.py
src/recommend/ml/imf/production_model/: config.py  train.py
src/recommend/ml/item2vec/: description.md  fetcher.py  predictor.py  trainer.py
src/recommend/ml/item2vec/production_model/: config.py  train.py
src/recommend/ml/item2vec/sqls/: fetch_data_for_predict.sql  fetch_data_for_train.sql
src/recommend/ml/mlflow/: experiment.py
src/recommend/ml/utils/: dataclass.py  metric_calcurator.py
